overlays/ops/patches/app-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pega-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: pega-web-tomcat
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pega-batch
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: pega-web-tomcat
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pega-stream
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: pega-web-tomcat
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
